# rust-actix-graphql-api-boilerplate

./: README.md
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/dbs/: mod.rs
backend/src/gql/: mod.rs  queries.rs
backend/src/log/: mod.rs
backend/src/models/user/: mod.rs  service.rs
backend/src/util/: constant.rs
